dnl Process this file with autoconf to produce a configure script.
dnl Created by Anjuta application wizard.

AC_INIT(upload, 1.0.0)

AC_CONFIG_HEADERS([config.h])

AM_INIT_AUTOMAKE([1.11])

AM_SILENT_RULES([yes])

AC_PROG_CC










PKG_CHECK_MODULES(UPLOAD, [ ])




AC_OUTPUT([
Makefile
src/Makefile

])
